# status-overlay

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  result
scripts/: plot_usage.py
src/: clock.rs  codex.rs  ipc.rs  main.rs  notify.rs  plot.rs  storage.rs  style.css  usage.rs
