[package]
name = "status-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4-layer-shell = "0.5"
gio = "0.20"
gtk = { package = "gtk4", version = "0.9" }
glib = "0.20"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }
libc = "0.2"
async-channel = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
plotters = "0.3"
plotters-svg = "0.3"
plotters-cairo = "0.7"
gdk-pixbuf = "0.20"
